# CancerComposer

./: .gitignore  README.md  pyproject.toml
src/CnacerComposer/: model.py
src/CnacerComposer/deconvolution/: _dataset.py  _lightning_module.py  _nn.py
src/CnacerComposer/deconvolution/deprecated/: _nn.py
src/CnacerComposer/simulation/: __init__.py  _random.py  _simulator.py
