[project]
name = "CancerComposer"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Wade Huang", email = "fastwade11@gmail.com" }
]
dependencies = [
    "torch==2.0.1",
    "torchmetrics==1.4.0",
    "lightning==2.2.0",
    "rich>=13.7",
    "pandas>=2.2",
    "jupyter>=1.0.0",
    "anndata>=0.10.8",
    "hdf5plugin>=4.4.0",
    "scikit-misc>=0.4.0",
    "ruff>=0.5.1",
    "scanpy>=1.10.2",
    "tqdm>=4.66.4",
    "wandb>=0.17.4",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "wandb>=0.17.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/CancerComposer"]

[[tool.rye.sources]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
type = "find-links"

[tool.ruff]
line-length = 120
